// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchInput > Key > renders correctly with disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #b5b7bd;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
      data-disabled="true"
      data-testid="key-K"
    >
      <span
        class="emotion-2 emotion-3"
      >
        K
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special   key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="false"
      data-testid="key- "
    >
      <span
        class="emotion-2 emotion-3"
      >
        ␣
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Alt key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Alt"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Alt
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowDown key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-ArrowDown"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↓
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowLeft key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-ArrowLeft"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ←
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowRight key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-ArrowRight"
    >
      <span
        class="emotion-2 emotion-3"
      >
        →
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special ArrowUp key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-ArrowUp"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↑
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Backspace key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Backspace"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌫
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special CapsLock key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-CapsLock"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Caps
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Control key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Control"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Ctrl
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Delete key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Delete"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌦
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Enter key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Enter"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ↵
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Escape key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Escape"
    >
      <span
        class="emotion-2 emotion-3"
      >
        Esc
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > Key > renders correctly with special Meta key 1`] = `
<DocumentFragment>
  .emotion-0 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-0[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-2 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
      data-children-length="true"
      data-testid="key-Meta"
    >
      <span
        class="emotion-2 emotion-3"
      >
        ⌘
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders correctly without children props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-14 {
  padding: 0;
}

.emotion-3 .el3h3g93 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-14 {
  color: #3f4250;
}

.emotion-5>.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-14 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-11 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-13[data-size='large'] {
  font-size: 1rem;
}

.emotion-13[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«re»"
        aria-describedby="«re»"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <div
                  class="emotion-9 emotion-10"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-11 emotion-12"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-13 emotion-14"
                data-size="large"
                id="«rf»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with disabled prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-14 {
  padding: 0;
}

.emotion-3 .el3h3g93 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-14 {
  color: #3f4250;
}

.emotion-5>.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-14 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-11 {
  vertical-align: middle;
  fill: #b5b7bd;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #b5b7bd;
  fill: none;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-13[data-size='large'] {
  font-size: 1rem;
}

.emotion-13[data-size='small'] {
  padding-left: 0.5rem;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rh»"
        aria-describedby="«rh»"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="true"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <div
                  class="emotion-9 emotion-10"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-11 emotion-12"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-13 emotion-14"
                data-size="large"
                disabled=""
                id="«ri»"
                placeholder="Type something"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with error prop 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-14 {
  padding: 0;
}

.emotion-3 .el3h3g93 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-14 {
  color: #3f4250;
}

.emotion-5>.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-14 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-11 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-13[data-size='large'] {
  font-size: 1rem;
}

.emotion-13[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  padding: 0 1rem;
}

.emotion-17 {
  vertical-align: middle;
  fill: #b3144d;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-17 .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.emotion-19 {
  color: #b3144d;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rv»"
        aria-describedby="«rv»"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="true"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <div
                  class="emotion-9 emotion-10"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-11 emotion-12"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="true"
                class="emotion-13 emotion-14"
                data-size="large"
                id="«r10»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-15 emotion-16"
              >
                <svg
                  class="emotion-17 emotion-12"
                  viewBox="0 0 16 16"
                >
                  <path
                    clip-rule="evenodd"
                    d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="emotion-19 emotion-20"
          >
            there is an error
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with shortcut prop > as array of string 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-14 {
  padding: 0;
}

.emotion-3 .emotion-16 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-14 {
  color: #3f4250;
}

.emotion-5>.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-14 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-11 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-13[data-size='large'] {
  font-size: 1rem;
}

.emotion-13[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  cursor: text;
}

.emotion-19 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-19[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-21 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rp»"
        aria-describedby="«rp»"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <div
                  class="emotion-9 emotion-10"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-11 emotion-12"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-13 emotion-14"
                data-size="large"
                id="«rq»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-15 emotion-16"
              >
                <div
                  class="emotion-17 emotion-18"
                >
                  <div
                    class="emotion-19 emotion-20"
                    data-children-length="true"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      Ctrl
                    </span>
                  </div>
                  <div
                    class="emotion-19 emotion-20"
                    data-children-length="true"
                    data-testid="key-Shift"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      Shift
                    </span>
                  </div>
                  <div
                    class="emotion-19 emotion-20"
                    data-children-length="false"
                    data-testid="key-A"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      A
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchInput > renders with shortcut prop > as boolean 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: inherit;
}

.emotion-0[data-container-full-height="true"] {
  height: 100%;
}

.emotion-0[data-container-full-width="true"] {
  width: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 0.25rem;
}

.emotion-3 .emotion-8 {
  border: none;
}

.emotion-3 .emotion-14 {
  padding: 0;
}

.emotion-3 .emotion-16 {
  border: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 3rem;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-5>.emotion-14 {
  color: #3f4250;
}

.emotion-5>.emotion-14::-webkit-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::-moz-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14:-ms-input-placeholder {
  color: #727683;
}

.emotion-5>.emotion-14::placeholder {
  color: #727683;
}

.emotion-5[data-success='true'] {
  border-color: #22674e;
}

.emotion-5[data-error='true'] {
  border-color: #b3144d;
}

.emotion-5[data-readonly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.emotion-5[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-5[data-disabled='true']>.emotion-14 {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-webkit-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::-moz-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14:-ms-input-placeholder {
  color: #b5b7bd;
}

.emotion-5[data-disabled='true']>.emotion-14::placeholder {
  color: #b5b7bd;
}

.emotion-5:not([data-disabled='true']):not([data-readonly]):hover {
  border-color: #8c40ef;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 1rem;
  border-right: 1px solid;
  border-color: inherit;
}

.emotion-7[data-size="small"] {
  padding: 0.5rem;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  cursor: text;
}

.emotion-11 {
  vertical-align: middle;
  fill: #3f4250;
  height: 1rem;
  width: 1rem;
  min-width: 1rem;
  min-height: 1rem;
}

.emotion-11 .fillStroke {
  stroke: #3f4250;
  fill: none;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  width: 100%;
  padding-left: 1rem;
  background: transparent;
  font-size: 0.875rem;
}

.emotion-13[data-size='large'] {
  font-size: 1rem;
}

.emotion-13[data-size='small'] {
  padding-left: 0.5rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 0 1rem;
  border-left: 1px solid;
  border-color: inherit;
}

.emotion-17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.25rem;
  cursor: text;
}

.emotion-19 {
  cursor: text;
  background: #f9f9fa;
  border-radius: 0.25rem;
  border: 0.5px solid #d9dadd;
  min-width: 1.5rem;
  min-height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-19[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.emotion-19[data-children-length='true'] {
  width: auto;
  padding: 0 0.5rem;
}

.emotion-21 {
  color: #3f4250;
  font-size: 0.75rem;
  font-family: Inter,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1rem;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      style="width: 100%;"
    >
      <div
        aria-controls="«rk»"
        aria-describedby="«rk»"
        class="emotion-0 emotion-1"
        tabindex="0"
      >
        <div
          class="emotion-2 emotion-3 emotion-4"
        >
          <div>
            <div
              class="emotion-5 emotion-6"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <div
                class="emotion-7 emotion-8"
                data-size="large"
              >
                <div
                  class="emotion-9 emotion-10"
                  data-testid="search-icon"
                >
                  <svg
                    class="emotion-11 emotion-12"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M9.965 11.026a5 5 0 1 1 1.06-1.06l2.755 2.754a.75.75 0 1 1-1.06 1.06zM10.5 7a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
              <input
                aria-invalid="false"
                class="emotion-13 emotion-14"
                data-size="large"
                id="«rl»"
                placeholder="Type something"
                type="text"
                value=""
              />
              <div
                class="emotion-15 emotion-16"
              >
                <div
                  class="emotion-17 emotion-18"
                >
                  <div
                    class="emotion-19 emotion-20"
                    data-children-length="true"
                    data-testid="key-Ctrl"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      Ctrl
                    </span>
                  </div>
                  <div
                    class="emotion-19 emotion-20"
                    data-children-length="false"
                    data-testid="key-K"
                  >
                    <span
                      class="emotion-21 emotion-22"
                    >
                      K
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
